Added word highlight window above OCR text editor

--- a/MainUI.lfm
+++ b/MainUI.lfm
@@ -1,7 +1,7 @@
 object MainForm: TMainForm
-  Left = 0
+  Left = 50
   Height = 746
-  Top = -7
+  Top = 121
   Width = 1225
   ActiveControl = ListboxPanel
   Caption = 'Ocrivist'
@@ -75,14 +75,33 @@ object MainForm: TMainForm
     ClientHeight = 656
     ClientWidth = 375
     TabOrder = 2
-    object Panel1: TPanel
+    object CorrectionPanel: TPanel
       Left = 1
       Height = 301
       Top = 1
       Width = 373
       Align = alTop
-      Caption = 'Panel1'
+      Caption = 'CorrectionPanel'
+      ClientHeight = 301
+      ClientWidth = 373
       TabOrder = 0
+      object CorrectionviewScrollBox: TScrollBox
+        Left = 1
+        Height = 299
+        Top = 1
+        Width = 371
+        Align = alClient
+        ClientHeight = 297
+        ClientWidth = 369
+        TabOrder = 0
+        object CorrectionviewImage: TImage
+          Left = 0
+          Height = 297
+          Top = 0
+          Width = 369
+          Align = alClient
+        end
+      end
     end
     object Panel2: TPanel
       Left = 1
@@ -273,6 +292,13 @@ object MainForm: TMainForm
       Width = 8
       Caption = 'ToolButton2'
       Style = tbsSeparator
+    end
+    object SpellcheckButton: TToolButton
+      Left = 545
+      Top = 2
+      Caption = 'SpellcheckButton'
+      ImageIndex = 17
+      OnClick = SpellcheckButtonClick
     end
   end
   object OpenDialog: TOpenDialog
@@ -921,7 +947,7 @@ object MainForm: TMainForm
     left = 976
     top = 8
     Bitmap = {
-      4C69110000002400000024000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      4C69120000002400000024000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
@@ -3662,6 +3688,168 @@ object MainForm: TMainForm
       000A0000000A0000000A0000000A0000000A0000000A0000000A0000000A0000
       000A0000000A0000000A0000000A0000000A0000000A0000000A0000000A0000
       000A00000004FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF003737312A393833D3393733D8393733D8393732AF0000
+      0001FFFFFF00FFFFFF003A3832A4393733D8393733D83838316DFFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF003A3832B18F95
+      92FF9EA3A1FF9EA3A1FF6E706BF337332F3CFFFFFF00FFFFFF004E4F48EA9EA3
+      A1FF9EA3A1FF3A3833D9FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00242424074E4E48EA5F6362FF535755FF535755FF6A6D6BFF3938
+      34ADFFFFFF00FFFFFF003B3A34E6535755FF535755FF383731DF37342F5D3838
+      338C35352D44FFFFFF00FFFFFF00FFFFFF003333330A36362F51383833883838
+      338C363630502E2E2E0BFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0037342E53656763F75458
+      56FF505350FF545856FF616663FF4E4E4BE72B2B2B06FFFFFF003C3B35E65458
+      56FF565A58FF53534EF9888D89FC979D9AFF737672F5393832AE000000013936
+      3247464641E4828783FB979D9AFF989D9AFF7F827FF9393832C0FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF003A3933C26E716FFF565A58FF484944F5525552FF565A58FF6769
+      66F638352F52FFFFFF003D3C36E6565A58FF555957FF8C9290FF656866FF5B5E
+      5DFF797D7BFF6F716EF73636307550504BEA969C99FF6B716EFF5B5F5DFF5B5E
+      5DFF717674FF393832DAFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF003737370E565751ED606462FF5A5E
+      5CFF3A3934EC474743EC575B59FF707471FF3A3833C3FFFFFF003E3D37E6585C
+      5AFF585C5AFF444440ED393833BF454440ED585C5AFF6D716FFF36352FFA777C
+      79FE555957FF565956FF3E3D37E6393832D53F3F3AE9393832D1FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00373530666B6E6AFA5A5E5CFF5D5F5DFF383731F43E3D37F6606361FF6669
+      67FF595A55EB303030103F3E38E75E6260FF606462FF3C3A34E4FFFFFF003C3A
+      35E2606462FF6B6F6DFF44433EF76A6E6CFF5C605EFF4A4A45EE36362C34FFFF
+      FF0039322B2435352D22FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF003C3B34D07A7F7CFF5D6260FF7074
+      72FFA3AAA6FF9BA19EFF616664FF616664FF707470FA39372F6C42413BE8676B
+      69FF686D6BFF44433DE30000000144433EE0686D6BFF686D6BFF44433FF96A6E
+      6BFF636866FF4F4F4BEC36362F26FFFFFF00242424073333330AFFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF002E2E
+      251C5F615DEF717775FF686D6BFF6E7371FF6E7371FF6E7371FF6D7270FF656A
+      68FF818584FF3D3C39D744423DE96F7472FF6D7270FF696B67F33A3933C2696B
+      66F36D7270FF727774FF373530F9696B69FF686D6BFF7C807DFE464640DE3A3A
+      34A84E4D49E93A3934C500000004FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00000000053836307F7B7C7AFC707472FF747674FF4848
+      43EB484842EA484842EA4F4F4AEF7A7D7BFF787B79FF646762F045443FEA777A
+      78FF707472FF969C99FFA5ACA8FF929795FF757977FF61625EF936352EA04847
+      43EB7B7F7DFF7F8381FFA3A8A6FFA6ABA9FFA2A7A5FF3C3A35DC0000000A0000
+      0005FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0000000001000000063D3B
+      36D77E817FFF777977FF535350F4292923561010082010100820393833AE6A6C
+      68FE777977FF6E716DFE42413BF1777977FF757875FF4F4E4AF8747774FF7C7F
+      7CFF666764FA3B3A35D30808081E37353182494843EB717370FF7C807DFF7F81
+      7FFF717370FE3B3A35D20000000C0000000600000001FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF000000000338352F563D3B35A03C3B34A13836327F0000
+      00120000001000000010231C1C253A3934993C3B34A13B3B349D37352F7D3C3B
+      34A13C3B34A030302B643B3A359B3E3C37C23735317D0C0C0C16000000100000
+      001025251F313A3A33963D3C36C53D3C37C7393732942929232B000000080000
+      0003FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF000000
+      000105934A370000000500000006000000070000000700000007048B463B0000
+      000700000007000000070000000700000007048B463B00000007000000070000
+      00070000000700000007048B463B000000070000000700000007000000070000
+      0006048F48390000000300000001FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00069B4F540DA558FC059A4E90FFFFFF00FFFF
+      FF00FFFFFF00069B4F540DA558FC059A4E90FFFFFF00FFFFFF00FFFFFF00069B
+      4F540DA558FC059A4E90FFFFFF00FFFFFF00FFFFFF00069B4F540DA558FC059A
+      4E90FFFFFF00FFFFFF00FFFFFF00069B4F540DA558FC059A4E90FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00069B4F5413AF
+      5FFC2CD680FF1DBE6CFF05974E910000000406964C5713AF5FFC2CD680FF1DBE
+      6CFF05974E910000000406964C5713AF5FFC2CD680FF1DBE6CFF05974E910000
+      000406964C5713AF5FFC2CD680FF1DBE6CFF05974E910000000406964C5713AF
+      5FFC2CD680FF1DBE6CFF05984E9000000001FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF0006964C5713AF5FFC26CC77FF079C50E91DBE6CFF1DBE6CFF0696
+      4DB713AF5FFC26CC77FF079C50E91DBE6CFF1DBE6CFF06964DB713AF5FFC26CC
+      77FF079C50E91DBE6CFF1DBE6CFF06964DB713AF5FFC26CC77FF079C50E91DBE
+      6CFF1DBE6CFF06964DB713AF5FFC26CC77FF079C50E91DBE6CFF1DBE6CFF0595
+      4C930000000700000002FFFFFF00FFFFFF0006944A5913AF5FFC26CC77FF089A
+      4FCA003B1D23059049991DBE6CFF23C875FF26CC77FF08994ECB00391D24058F
+      499A1DBE6CFF23C875FF26CC77FF08994ECB00391D24058F499A1DBE6CFF23C8
+      75FF26CC77FF08994ECB00391D24058F499A1DBE6CFF23C875FF26CC77FF0899
+      4ECB00391D24058F49991DBE6CFF1DBE6CFF05954A970000000700000002FFFF
+      FF0005984D9617B464FF089A4FC900351E220000001D0000001D058C479D17B4
+      64FF08984ECD002A182A0000002000000020058C479D17B464FF08984ECD002A
+      182A0000002000000020058C479D17B464FF08984ECD002A182A000000200000
+      0020058C479D17B464FF08984ECD002A182A000000200000001E058E499A18B5
+      65FF07994FCC005B271400000003FFFFFF000033000506934A78004E271A0000
+      0012000000150000001500000016068A477D003C1E2200000016000000160000
+      001600000016068A477D003C1E2200000016000000160000001600000016068A
+      477D003C1E2200000016000000160000001600000016068A477D003C1E220000
+      0016000000160000001500000014068E497A005B32190000000700000001FFFF
+      FF00FFFFFF000000000200000007000000090000000B0000000C0000000D0000
+      000D0000000D0000000D0000000D0000000D0000000D0000000D0000000D0000
+      000D0000000D0000000D0000000D0000000D0000000D0000000D0000000D0000
+      000D0000000D0000000D0000000D0000000D0000000D0000000B0000000A0000
+      00080000000500000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00000000010000000200000002000000020000000200000002000000020000
+      0002000000020000000200000002000000020000000200000002000000020000
+      0002000000020000000200000002000000020000000200000002000000020000
+      0002000000020000000100000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
       FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
