--- a/trunk/MainUI.lfm
+++ b/trunk/MainUI.lfm
@@ -1,27 +1,27 @@
 object MainForm: TMainForm
-  Left = 50
-  Height = 746
-  Top = 121
-  Width = 1225
+  Left = 0
+  Height = 722
+  Top = 0
+  Width = 1024
   ActiveControl = ListboxPanel
   Caption = 'Ocrivist'
-  ClientHeight = 719
-  ClientWidth = 1225
+  ClientHeight = 695
+  ClientWidth = 1024
   KeyPreview = True
   Menu = MainMenu
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnKeyDown = FormKeyDown
-  LCLVersion = '0.9.29'
+  LCLVersion = '1.0.1.3'
   WindowState = wsMaximized
   object ListboxPanel: TPanel
     Left = 0
-    Height = 656
+    Height = 632
     Top = 42
     Width = 130
     Align = alLeft
     Caption = 'ListboxPanel'
-    ClientHeight = 656
+    ClientHeight = 632
     ClientWidth = 130
     TabOrder = 0
     object ThumbnailListBox: TListBox
@@ -31,7 +31,7 @@ object MainForm: TMainForm
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = pagecountLabel
       Left = 1
-      Height = 633
+      Height = 609
       Top = 1
       Width = 128
       Anchors = [akTop, akLeft, akRight, akBottom]
@@ -46,13 +46,14 @@ object MainForm: TMainForm
       OnDrawItem = ThumbnailListBoxDrawItem
       OnMouseDown = ThumbnailListBoxMouseDown
       OnMouseUp = ThumbnailListBoxMouseUp
+      ScrollWidth = 124
       Style = lbOwnerDrawVariable
       TabOrder = 0
     end
     object pagecountLabel: TLabel
       Left = 8
       Height = 18
-      Top = 634
+      Top = 610
       Width = 5
       Anchors = [akLeft, akBottom]
       Caption = ' '
@@ -61,44 +62,47 @@ object MainForm: TMainForm
   end
   object Splitter1: TSplitter
     Left = 130
-    Height = 656
+    Height = 632
     Top = 42
     Width = 5
   end
-  object RightPanel: TPanel
-    Left = 850
-    Height = 656
+  object OCRPanel: TPanel
+    Left = 135
+    Height = 632
     Top = 42
-    Width = 375
-    Align = alRight
-    Caption = 'RightPanel'
-    ClientHeight = 656
-    ClientWidth = 375
+    Width = 889
+    Align = alClient
+    Caption = 'OCRPanel'
+    ClientHeight = 632
+    ClientWidth = 889
     TabOrder = 2
+    Visible = False
     object CorrectionPanel: TPanel
       Left = 1
-      Height = 301
+      Height = 149
       Top = 1
-      Width = 373
+      Width = 887
       Align = alTop
       Caption = 'CorrectionPanel'
-      ClientHeight = 301
-      ClientWidth = 373
+      ClientHeight = 149
+      ClientWidth = 887
       TabOrder = 0
       object CorrectionviewScrollBox: TScrollBox
         Left = 1
-        Height = 299
+        Height = 147
         Top = 1
-        Width = 371
+        Width = 885
+        HorzScrollBar.Page = 881
+        VertScrollBar.Page = 143
         Align = alClient
-        ClientHeight = 297
-        ClientWidth = 369
+        ClientHeight = 143
+        ClientWidth = 881
         TabOrder = 0
         object CorrectionviewImage: TImage
           Left = 0
-          Height = 297
+          Height = 143
           Top = 0
-          Width = 369
+          Width = 881
           Align = alClient
         end
       end
@@ -106,45 +110,37 @@ object MainForm: TMainForm
     object Panel2: TPanel
       Left = 1
       Height = 65
-      Top = 590
-      Width = 373
+      Top = 566
+      Width = 887
       Align = alBottom
       Caption = 'Panel2'
       TabOrder = 1
     end
     object Panel3: TPanel
       Left = 1
-      Height = 288
-      Top = 302
-      Width = 373
+      Height = 416
+      Top = 150
+      Width = 887
       Align = alClient
       Caption = 'Panel3'
       TabOrder = 2
     end
   end
-  object Splitter2: TSplitter
-    Left = 845
-    Height = 656
-    Top = 42
-    Width = 5
-    Align = alRight
-    ResizeAnchor = akRight
-  end
   object MainPanel: TPanel
     Left = 135
-    Height = 656
+    Height = 632
     Top = 42
-    Width = 710
+    Width = 889
     Align = alClient
     AutoSize = True
     Caption = 'MainPanel'
-    TabOrder = 4
+    TabOrder = 3
   end
   object StatusBar: TStatusBar
     Left = 0
     Height = 21
-    Top = 698
-    Width = 1225
+    Top = 674
+    Width = 1024
     Panels = <    
       item
         Width = 150
@@ -155,88 +151,101 @@ object MainForm: TMainForm
     SimplePanel = False
   end
   object ToolBar1: TToolBar
+    Tag = 1
     Left = 0
     Height = 42
     Top = 0
-    Width = 1225
+    Width = 1024
     AutoSize = True
     ButtonHeight = 40
     ButtonWidth = 40
     Caption = 'ToolBar1'
     Images = ImageList1
     List = True
-    TabOrder = 6
+    TabOrder = 5
     object RotateLeftTButton: TToolButton
-      Tag = -1
-      Left = 237
+      Tag = 1
+      Left = 243
       Top = 2
       Caption = 'RotateLeftTButton'
       ImageIndex = 7
       OnClick = RotateButtonClick
+      Visible = False
     end
     object RotateRightButton: TToolButton
       Tag = 1
-      Left = 277
+      Left = 283
       Top = 2
       Caption = 'Rotate Right'
       ImageIndex = 8
       OnClick = RotateButtonClick
+      Visible = False
     end
     object SelectToolButton: TToolButton
-      Left = 357
+      Tag = 1
+      Left = 363
       Top = 2
       Caption = 'Mode'
       DropdownMenu = SelModeMenu
       ImageIndex = 9
       OnClick = SelTextButtonClick
+      Visible = False
     end
     object FitWidthButton: TToolButton
       Tag = 1
-      Left = 189
+      Left = 193
       Top = 2
       Caption = 'FitWidthButton'
       ImageIndex = 1
       OnClick = ViewMenuItemClick
     end
     object ToolButton6: TToolButton
-      Left = 437
+      Tag = 1
+      Left = 443
       Top = 2
-      Width = 8
+      Width = 10
       Caption = 'ToolButton6'
       Style = tbsSeparator
+      Visible = False
     end
     object ExportButton: TToolButton
-      Left = 493
+      Tag = 1
+      Left = 503
       Top = 2
       Caption = 'ExportButton'
       DropdownMenu = ExportModeMenu
       ImageIndex = 2
       OnClick = DjvuButtonClick
       Style = tbsDropDown
+      Visible = False
     end
     object DeskewButton: TToolButton
-      Left = 317
+      Tag = 1
+      Left = 323
       Top = 2
       Caption = 'DeskewButton'
       ImageIndex = 6
       OnClick = DeskewButtonClick
+      Visible = False
     end
     object FitHeightButton: TToolButton
-      Left = 149
+      Left = 153
       Top = 2
       Caption = 'FitHeightButton'
       ImageIndex = 0
       OnClick = ViewMenuItemClick
     end
     object TesseractButton: TToolButton
-      Left = 445
+      Tag = 1
+      Left = 453
       Top = 2
       Caption = 'TesseractButton'
       ImageIndex = 10
       OnClick = TestTesseractButtonClick
+      Visible = False
     end
     object AddPageButton: TToolButton
-      Left = 49
+      Left = 51
       Top = 2
       Caption = 'AddPageButton'
       DropdownMenu = LoadModeMenu
@@ -245,21 +254,23 @@ object MainForm: TMainForm
       Style = tbsDropDown
     end
     object ToolButton1: TToolButton
-      Left = 141
+      Left = 143
       Top = 2
-      Width = 8
+      Width = 10
       Caption = 'ToolButton1'
       Style = tbsSeparator
     end
     object ToolButton3: TToolButton
-      Left = 229
+      Tag = 1
+      Left = 233
       Top = 2
-      Width = 8
+      Width = 10
       Caption = 'ToolButton3'
       Style = tbsSeparator
+      Visible = False
     end
     object DelPageButton: TToolButton
-      Left = 101
+      Left = 103
       Top = 2
       Caption = 'DelPageButton'
       Enabled = False
@@ -271,34 +282,41 @@ object MainForm: TMainForm
       Top = 2
       Caption = 'SaveButton'
       ImageIndex = 12
+      OnClick = SaveButtonClick
     end
     object AutoselectButton: TToolButton
-      Left = 397
+      Tag = 1
+      Left = 403
       Top = 2
       Caption = 'AutoselectButton'
       ImageIndex = 13
       OnClick = AnalyseButtonClick
+      Visible = False
     end
     object ToolButton4: TToolButton
       Left = 41
       Top = 2
-      Width = 8
+      Width = 10
       Caption = 'ToolButton4'
       Style = tbsSeparator
     end
     object ToolButton2: TToolButton
-      Left = 485
+      Tag = 1
+      Left = 493
       Top = 2
-      Width = 8
+      Width = 10
       Caption = 'ToolButton2'
       Style = tbsSeparator
+      Visible = False
     end
     object SpellcheckButton: TToolButton
-      Left = 545
+      Tag = 1
+      Left = 555
       Top = 2
       Caption = 'SpellcheckButton'
       ImageIndex = 17
       OnClick = SpellcheckButtonClick
+      Visible = False
     end
   end
   object OpenDialog: TOpenDialog
